@@ -60,14 +60,14 @@ is do { no warnings; call_closure(2.5) }, 0, 'call_closure(2.5) = 0';
 
 subtest 'custom type input' => sub {
   plan tests => 2;
-  custom_type float => type1 => { perl_to_native => sub { is $_[0], 1.25; $_[0]+0.25 } };
+  custom_type type1 => { native_type => 'float', perl_to_native => sub { is $_[0], 1.25; $_[0]+0.25 } };
   attach [float_add => 'custom_add'] => ['type1',float] => float;
   is custom_add(1.25,2.5), 4, 'custom_add(1.25,2.5) = 4';
 };
 
 subtest 'custom type output' => sub {
   plan tests => 2;
-  custom_type float => type2 => { native_to_perl => sub { is $_[0], 2.0; $_[0]+0.25 } };
+  custom_type type2 => { native_type => 'float', native_to_perl => sub { is $_[0], 2.0; $_[0]+0.25 } };
   attach [float_add => 'custom_add2'] => [float,float] => 'type2';
   is custom_add2(1,1), 2.25, 'custom_add2(1,1) = 2.25';
 };
