@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Third beta
   - moved cast and sizeof from FFI::Platypus::Memory
     into FFI::Platypus methods.
   - cast and size of functions for FFI::Platypus::Declare
@@ -8,8 +9,11 @@ Revision history for {{$dist->name}}
   - renamed FFI::Platypus::Declare#function to
     FFI::Platypus::Declare#attach to more closely match
     the OO interface
-  - renamed ffi_to_perl native_to_perl
-  - renamed perl_to_ffi perl_to_native
+  - adjusted custom type interface
+    - renamed ffi_to_perl native_to_perl
+    - renamed perl_to_ffi perl_to_native
+    - type argument is now part of the hash and is called
+      native_type
 
 0.08      2015-01-16 10:55:14 -0500
   - Second beta
